Demos/ec2.yaml
AWSTemplateFormatVersion: 2010-09-09 # Versión estandar (FIJA)
Description: >
  Despliegue de una instancia EC2 en una VPC con un grupo de seguridad 
  y un perfil de instancia.

# Definición de Parámetros (Generalización)
Parameters:
  pprofilename: # Nombre del perfil de instancia
    Description: Instance profile name
    Type: String
  
  prolename: # Nombre del rol
    Description: Role name for instance profile
    Type: String

  pscgroupname: # Nombre del grupo de seguridad
    Description: Sec group for ec2
    Type: String
  
  pvpcId: # ID de la VPC (VPC -> Default)
    Description: vpc ID
    Type: String

  psubnetId: # ID de la subred (VPC -> Subred -> AvailabilityZone)
    Description: subnet ID
    Type: String

# Creación de Recursos
Resources:

  # 1. Creación de Grupo de Seguridad (Firewall)
  rSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EC2 security group
      GroupName: !Ref pscgroupname
      # Cualquier persona puede ingresar si va a hacer request por puerto 22 y 80
      SecurityGroupEgress: 
        - CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref pvpcId

  # 2. Creación de Rol 
  rRole: 
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Description: Role for instance profile
      ManagedPolicyArns: 
        - "arn:aws:iam::aws:policy/AdministratorAccess"
      Path: /
      RoleName: !Ref prolename

  # 3. Creación de Perfil de Instancia (Adaptador entre el rol y la instancia -> Brindar acceso a la instancia)
  rInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: !Ref pprofilename
      Path: /
      Roles: 
        - !Ref rRole

  # 4. Creación de Instancia EC2
  rInstance:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: "us-east-1a" # Zona de disponibilidad de despliegue
      BlockDeviceMappings: 
        - DeviceName: /dev/xvda # Almacenamiento raíz
          Ebs:
            VolumeSize: 50
            DeleteOnTermination: true 
        - DeviceName: /dev/sdf # Almacenamiento adicional
          Ebs:
            VolumeSize: 120
            DeleteOnTermination: true
      IamInstanceProfile: !Ref rInstanceProfile
      ImageId: ami-051f8a213df8bc089
      InstanceType: t2.micro
      KeyName: demo_par_claves
      SecurityGroupIds: 
        - !Ref rSecGroup
      SubnetId: !Ref psubnetId
      UserData: 
            Fn::Base64: # Codificación de la cadena
              !Sub | 
                #!/bin/bash
                yum update -y
                yum install -y httpd
                yum -y install epel-release
                yum -y install htop
                sudo yum install awscli
                sudo mkfs -t xfs /dev/xvdf
                sudo mkdir /data
                sudo mount /dev/xvdf /data
                systemctl start httpd
                systemctl enable httpd
                echo "<h1>Hello Mundo from $(hostname -f) </h1>" > /var/www/html/index.html
